# jex

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: clang-tidy.yml  cmake.yml
lib/: CMakeLists.txt  jex_ast.cpp  jex_ast.hpp  jex_astvisitor.cpp  jex_astvisitor.hpp  jex_base.hpp  jex_basicastvisitor.cpp  jex_basicastvisitor.hpp  jex_builtins.cpp  jex_builtins.hpp  jex_compileenv.cpp  jex_compileenv.hpp  jex_errorhandling.cpp  jex_errorhandling.hpp  jex_fctinfo.hpp  jex_fctlibrary.cpp  jex_fctlibrary.hpp  jex_lexer.cpp  jex_lexer.hpp  jex_location.cpp  jex_location.hpp  jex_parser.cpp  jex_parser.hpp  jex_prettyprinter.cpp  jex_prettyprinter.hpp  jex_registry.cpp  jex_registry.hpp  jex_symboltable.cpp  jex_symboltable.hpp  jex_typeinference.cpp  jex_typeinference.hpp  jex_typeinfo.cpp  jex_typeinfo.hpp  jex_typesystem.cpp  jex_typesystem.hpp
lib/codegen/: CMakeLists.txt  jex_backend.cpp  jex_backend.hpp  jex_builtins.cpp  jex_builtins.hpp  jex_codegen.cpp  jex_codegen.hpp  jex_codegenutils.cpp  jex_codegenutils.hpp  jex_codegenvisitor.cpp  jex_codegenvisitor.hpp  jex_codemodule.cpp  jex_codemodule.hpp  jex_executioncontext.cpp  jex_executioncontext.hpp  jex_intrinsicgen.cpp  jex_intrinsicgen.hpp  jex_math.cpp  jex_math.hpp  jex_unwind.cpp  jex_unwind.hpp
lib/core/: CMakeLists.txt  jex_ast.cpp  jex_ast.hpp  jex_astvisitor.hpp  jex_base.hpp  jex_basicastvisitor.cpp  jex_basicastvisitor.hpp  jex_compileenv.cpp  jex_compileenv.hpp  jex_constantfolding.cpp  jex_constantfolding.hpp  jex_constantstore.cpp  jex_constantstore.hpp  jex_environment.cpp  jex_environment.hpp  jex_errorhandling.cpp  jex_errorhandling.hpp  jex_fctinfo.cpp  jex_fctinfo.hpp  jex_fctlibrary.cpp  jex_fctlibrary.hpp  jex_lexer.cpp  jex_lexer.hpp  jex_location.cpp  jex_location.hpp  jex_parser.cpp  jex_parser.hpp  jex_prettyprinter.cpp  jex_prettyprinter.hpp  jex_registry.hpp  jex_symboltable.cpp  jex_symboltable.hpp  jex_typehelpers.hpp  jex_typeinference.cpp  jex_typeinference.hpp  jex_typeinfo.hpp  jex_typesystem.cpp  jex_typesystem.hpp
lib/runtime/: CMakeLists.txt  jex_compiler.cpp  jex_compiler.hpp
scripts/: 0001-Add-jex-stubs-to-CompilerExplorer.patch
test/: CMakeLists.txt  test_base.hpp  test_lexer.cpp  test_parser.cpp  test_registry.cpp  test_symboltable.cpp  test_typeinference.cpp  test_typesystem.cpp
test/codegen/: CMakeLists.txt  test_backend.cpp  test_base.hpp  test_builtins.cpp  test_codegen.cpp
test/core/: CMakeLists.txt  test_base.cpp  test_base.hpp  test_constantfolding.cpp  test_lexer.cpp  test_parser.cpp  test_registry.cpp  test_symboltable.cpp  test_typeinference.cpp  test_typesystem.cpp
test/integration/: CMakeLists.txt  constvar.jex  expr.jex  jexc_cmdErrors.jex  jexc_cmdOptions.jex  lit.cfg.py  lit.site.cfg.py.in  logicOp.jex  unaryminus.jex  varargs.jex  varargsobject.jex  varargsvalue.jex  vardef.jex  vardefComplex.jex  varexpr.jex
test/unit/codegen/: test_backend.cpp  test_base.hpp  test_builtins.cpp  test_codegen.cpp
test/unit/core/: test_base.cpp  test_base.hpp  test_constantfolding.cpp  test_lexer.cpp  test_parser.cpp  test_registry.cpp  test_symboltable.cpp  test_typeinference.cpp  test_typesystem.cpp
test/unit/runtime/: CMakeLists.txt  test_compiler.cpp
tools/: CMakeLists.txt  jex_jexc.cpp  jex_jexc.hpp
